--- a/KyoshinMonitor EEW Observer REV-2/KyoshinMonitor EEW Observer REV-2.csproj
+++ b/KyoshinMonitor EEW Observer REV-2/KyoshinMonitor EEW Observer REV-2.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EEW.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
