--- a/KyoshinMonitor EEW Observer REV-2/App.config
+++ b/KyoshinMonitor EEW Observer REV-2/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="KyoshinMonitor_EEW_Observer_REV_2.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <KyoshinMonitor_EEW_Observer_REV_2.Properties.Settings>
+            <setting name="monit_url" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="monit_url2" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="eew_flg" serializeAs="String">
+                <value>w</value>
+            </setting>
+        </KyoshinMonitor_EEW_Observer_REV_2.Properties.Settings>
+    </userSettings>
 </configuration>
