--- a/KyoshinMonitor EEW Observer REV-2/App.config
+++ b/KyoshinMonitor EEW Observer REV-2/App.config
@@ -19,6 +19,9 @@
             <setting name="eew_flg" serializeAs="String">
                 <value>w</value>
             </setting>
+            <setting name="main" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
         </KyoshinMonitor_EEW_Observer_REV_2.Properties.Settings>
     </userSettings>
 </configuration>
