--- a/KyoshinMonitor EEW Observer REV-2/Properties/Settings.settings
+++ b/KyoshinMonitor EEW Observer REV-2/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="eew_flg" Type="System.String" Scope="User">
       <Value Profile="(Default)">w</Value>
     </Setting>
+    <Setting Name="main" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
