--- a/KyoshinMonitor EEW Observer REV-2/KyoshinMonitor EEW Observer REV-2.csproj
+++ b/KyoshinMonitor EEW Observer REV-2/KyoshinMonitor EEW Observer REV-2.csproj
@@ -53,12 +53,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EEW.cs" />
+    <Compile Include="EewResult.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="MonitorImageSelector.cs" />
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
